--- a/style.css
+++ b/style.css
@@ -1,8 +1,43 @@
 html {
     box-sizing: border-box;
 }
-
+header {
+    background-color: rgb(90, 231, 114);
+    width: 100%;
+    height:2%;
+}
 body {
     margin: 0;
     min-height: 100vh;
+    background-color: violet;
+    /* width: 70%; */
+    margin-left: auto;
+    margin-right: auto;
+}
+.section{
+    background-color: rgb(196, 173, 173);
+    height:150px;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+}
+.span70{
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.flexbox{
+    display: flex;
+}
+.card{
+    background-color:rgb(139, 203, 255);
+}
+.logo{
+    width:auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.rightalign{
+   float:right;
 }
