--- a/style.css
+++ b/style.css
@@ -1,10 +1,19 @@
 html {
     box-sizing: border-box;
 }
-header {
+.header {
     background-color: rgb(90, 231, 114);
     width: 100%;
-    height:2%;
+    height:5rem;
+    font-size:1.5rem;
+    }
+.header a {
+        text-decoration: none;
+        margin-top: auto;
+        margin-bottom: auto;
+}
+a:hover{
+   background-color:rgb(243, 243, 243);
 }
 body {
     margin: 0;
@@ -22,22 +31,47 @@ body {
     margin-right: auto;
     margin-bottom: 10px;
 }
-.span70{
-    width: 70%;
-    margin-left: auto;
-    margin-right: auto;
-}
+
 .flexbox{
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .card{
     background-color:rgb(139, 203, 255);
 }
 .logo{
     width:auto;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 .rightalign{
-   float:right;
+   justify-content:right;
+}
+.height5{
+    height:5%;
+
+}
+.height10{
+    height:10%;
+
+}
+.height15{
+    height:15%;
+
+}
+.height20{
+    height:20%;
+
+}
+.span70{
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.normalizer{
+    /* justify-self: center; */
+    /* justify-content:center; */
+    margin-left: auto;
+    margin-right: auto;
 }
