--- a/style.css
+++ b/style.css
@@ -2,15 +2,17 @@ html {
     box-sizing: border-box;
 }
 .header {
-    background-color: rgb(90, 231, 114);
+    /* background-color: #562DFF; */
     width: 100%;
     height:5rem;
-    font-size:1.5rem;
+    /* font-size:1.5rem; */
+    color:white;
     }
-.header a {
+div a {
         text-decoration: none;
-        margin-top: auto;
-        margin-bottom: auto;
+        margin-top: none;
+        margin-bottom: none;
+        color: white;
 }
 a:hover{
    background-color:rgb(243, 243, 243);
@@ -19,14 +21,13 @@ body {
     margin: 0;
     min-height: 100vh;
     background-color: violet;
+    color: white;
     /* width: 70%; */
     margin-left: auto;
     margin-right: auto;
 }
 .section{
     background-color: rgb(196, 173, 173);
-    height:150px;
-    width: 70%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 10px;
@@ -34,17 +35,32 @@ body {
 
 .flexbox{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    align-items: baseline;
+    width: 70%;
+    /* height: 100%; */
 }
+.flexbox > div {
+    /* margin: 10px; */
+    text-align: center;
+    line-height: 5rem;
+    font-size: 1.5rem;
+    background-color: #562DFF;
+    }
+    .flexbox2{
+        display: flex;
+        justify-content: space-between;
+        align-items: baseline;
+        
+    }
 .card{
     background-color:rgb(139, 203, 255);
 }
-.logo{
+/* .logo{
     width:auto;
     margin-top: auto;
     margin-bottom: auto;
-}
+} */
 .rightalign{
    justify-content:right;
 }
@@ -74,4 +90,7 @@ body {
     /* justify-content:center; */
     margin-left: auto;
     margin-right: auto;
+}
+a{
+
 }
