--- a/style.css
+++ b/style.css
@@ -164,13 +164,21 @@ article{
   grid-template-columns: auto auto auto;
   padding: 20px;
 }
-
-.player-card{
-  padding: 10px;
+.grid-blog{
+  display: grid;
+  grid-template-columns: auto auto ;
   padding: 20px;
+}
+.blog-card{
+  padding: 30px;
   font-size: 1.3em;
   width: 100%;
-  display: inline-block
+   }
+.player-card{
+  padding: 30px;
+  font-size: 1.3em;
+  width: 100%;
+
 }
 .player-card>h3{
   padding-left: 25px;
@@ -182,7 +190,8 @@ article{
   display: flex;
   margin-top: auto;
   margin-bottom: auto;
-  align-items:baseline ;
+  /* justify-content: space-evenly; */
+  /* align-items:baseline ; */
 }
 .flexonly>div{
   margin-top: auto;
@@ -193,6 +202,9 @@ article{
 h1{
   margin:0px;
   padding:1.5em 0 0 1.5em;
+  color:#562EFF;
+}
+span{
   color:#562EFF;
 }
 .w90{
@@ -212,7 +224,12 @@ h1{
 .w50{
   width:50%;
 }
-
+.w45{
+  width:45%;
+}
 .w40{
   width:40%;
 }
+                                                              /* blog */
+
+
