--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ li a:hover {
   text-align:center;
   font-size: 2rem;
   color: rgb(255, 255, 255);
+  padding-left: 1rem;
 }
 .idea:hover {
   color: rgb(255, 255, 255);
@@ -221,8 +222,7 @@ width:88%;
     grid-auto-flow: column;
     background-color: rgb(235, 205, 205);
   }
-  .grid-player{
-  }
+
   .container{
     height:auto;
     align-items: center;
@@ -232,12 +232,7 @@ width:88%;
     border-radius: 6px;
     width: 80%;
     }
-    .grid-course{
-      }
-      .nav{
-       }
-      .flex-container{
-      }
+
       .idea{
         text-align:center;
         font-size: 2rem;
@@ -367,6 +362,7 @@ div.grid{
       display: block;
       text-align:center;
       font-size: 2rem;
+      padding: 0;
     }
     .nav{
       width: 100vh;
@@ -382,7 +378,91 @@ div.grid{
         margin-right: auto;
       }
       ul.nav-bar{
-        width:90%;
+        width:10%;
+        margin-right: auto;
+        margin-left: auto;
+        text-decoration: none;
+        padding-left:0;
+      }        
+      li>a{
+        padding:0;
       }
+      div.icon{
+        padding:0;
+      }
+      div.idea{
+        padding-left:0;
+      }
+
 }
 
+
+@media only screen and (max-width: 690px) {
+  /* For mobile phones: */
+  .grid-blog{
+    display:block;
+    flex-direction:column;
+    width: 100%;
+  
+  }
+  .flexonly{
+    display:block;
+    width: 100%;
+  }
+  .grid{
+    grid-auto-flow: column;
+  }
+  div.grid{
+    grid-auto-flow: column;
+    background-color: rgb(235, 205, 205);
+  }
+  .grid-player{
+    display:block;
+  }
+  .container{
+    height:auto;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    background-color:white;
+    border-radius: 6px;
+    width: 80%;
+    }
+    .grid-course{
+      display: block;
+      }
+      .nav{
+        display:block;
+      }
+      .flex-container{
+        display:block;
+      }
+      .idea{
+        display: block;
+        text-align:center;
+        font-size: 2rem;
+      }
+      .nav{
+        width: 100vh;
+        background-color: #562EFF;
+        height:400px;
+        }
+        ul.nav-bar>li{
+          display: block;
+          text-align:center;
+          font-size: 1.5rem;
+          text-decoration: none;
+          margin-left: auto;
+          margin-right: auto;
+        }
+        ul.nav-bar{
+          width:10%;
+          margin-right: auto;
+          margin-left: auto;
+          text-decoration: none;
+          padding-left:0;
+        }
+        li>a{
+          padding-left:0;
+        }
+  }
